--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: pretty
 
 #### Markdown Processors
 # 'redcarpet' is unsupported on GitHub Pages now.
-markdown: rdiscount
+markdown: kramdown
 kramdown:
     input: GFM
 
